[FIX] html_builder: leave more space before select caret
Increase the builder select toggle right padding so the selected
label does not sit too close to the dropdown arrow.

--- a/addons/html_builder/static/src/core/building_blocks/builder_select.scss
+++ b/addons/html_builder/static/src/core/building_blocks/builder_select.scss
@@ -22,7 +22,7 @@
         display: block;
         flex: 1;
         min-width: 0;
-        padding-right: 0.75rem;
+        padding-right: 0.95rem;
         transition: none;
 
         &.show {
